; ModuleID = '/home/carl/AnghaBench/radare2/shlr/spp/extr_spp.c_spp_run_str.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/spp/extr_spp.c_spp_run_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32* }

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i32*)* @spp_run_str to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @spp_run_str(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_3__, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 1
  store i32* null, i32** %8, align 8
  %9 = call i32 @r_strbuf_new(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  store i32 %9, i32* %10, align 8
  %11 = load i8*, i8** %3, align 8
  %12 = call i32 @spp_run(i8* %11, %struct.TYPE_3__* %6)
  store i32 %12, i32* %7, align 4
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = call i32 @r_strbuf_get(i32 %14)
  %16 = call i8* @strdup(i32 %15)
  store i8* %16, i8** %5, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = call i32 @r_strbuf_free(i32 %18)
  %20 = load i32*, i32** %4, align 8
  %21 = icmp ne i32* %20, null
  br i1 %21, label %22, label %25

22:                                               ; preds = %2
  %23 = load i32, i32* %7, align 4
  %24 = load i32*, i32** %4, align 8
  store i32 %23, i32* %24, align 4
  br label %25

25:                                               ; preds = %22, %2
  %26 = load i8*, i8** %5, align 8
  ret i8* %26
}

declare dso_local i32 @r_strbuf_new(i8*) #1

declare dso_local i32 @spp_run(i8*, %struct.TYPE_3__*) #1

declare dso_local i8* @strdup(i32) #1

declare dso_local i32 @r_strbuf_get(i32) #1

declare dso_local i32 @r_strbuf_free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
